@@ -12,6 +12,8 @@ Version 0.0.8
 - added DummyClient for local in-app access to the API (+demo project)
 - added debug-Mode for Route (python debugger, function profiling)
 - added simpleapi-wide profiling capabilities (see debug2 demo project)
+- added standalone server (route.serve())
+- added support for WSGI-compatible server (like gunicorn)
 
 Version 0.0.7
 -------------
